--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular-resource": "~1.4.8",
     "angular-route": "~1.4.8",
     "angular-mocks": "1.4.8",
-    "alertify.js": "alertifyjs#~1.0.8"
+    "alertify.js": "alertifyjs#~1.0.8",
+    "bootstrap": "~3.3.6"
   }
 }
